# masters_program

./: README.md
construction_of_mobile_robots/beetle_rover/: README_run  run.sh
construction_of_mobile_robots/beetle_rover/beetle_control/: CMakeLists.txt  package.xml
construction_of_mobile_robots/beetle_rover/beetle_imu/: CMakeLists.txt  package.xml  ros_serial_publisher.py
construction_of_mobile_robots/beetle_rover/beetle_kinematic_model/: CMakeLists.txt  package.xml
construction_of_mobile_robots/beetle_rover/beetle_localzation_node/: CMakeLists.txt  package.xml
construction_of_mobile_robots/beetle_rover/beetle_msgs/: CMakeLists.txt  package.xml
construction_of_mobile_robots/beetle_rover/beetle_sim_description/: CMakeLists.txt  logfile.txt  model.urdf  package.xml
construction_of_mobile_robots/beetle_rover/beetle_tf_node/: CMakeLists.txt  package.xml
construction_of_mobile_robots/beetle_rover/beetle_wheel_odometry/: CMakeLists.txt  (+1 more)
construction_of_mobile_robots/beetle_rover/gazebo_drive_plugin/: CMakeLists.txt  package.xml
construction_of_mobile_robots/beetle_rover/gazebo_drive_plugin/src/: gazebo_drive_plugin.cpp
expert_systems/Pddl/: README.md
expert_systems/minizinc/: magicSquare.mzn
machine_learning/: assignment1.py  assignment2.py  assignment3.py  plot.py
real_time_bus_systems/: can.c  can.h  can_tests.h
real_time_os/: Makefile  core.S  kernel.c  kernel_intern.h  queues.c  startup.c  timer.c
robot_localization_masters_project/: DataConvert.py  Plot.py  ekf_odom_gps.py  es_ekf_imu_gps.py  ex_maps.py  rotations.py  stats.py  utm.py
robot_localization_masters_project/CSVFiles/: gps_fix.csv  ground_truth.csv  husky_cmdvel.csv  zed_odom.csv
(+28 files in other folders)
