<?xml version="1.0"?>
<package format="2">
  <name>gazebo_drive_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_drive_plugin package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>


 
  <export>
    <!-- Other tools can request additional information be placed here -->
	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>

